--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <iframe class="frame" src="https://ncctools.epizy.com"></iframe>
     </div>
     <div class="frame-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZnV8sZ1sHh5L2s5jA6wvCq8o913uZXhY7DK7DZSkL4PfAOw/viewform?pli=1&pli=1"></iframe>
+        <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZnV8sZ1sHh5L2s5jA6wvCq8o913uZXhY7DK7DZSkL4PfAOw/viewform?pli=1&pli=1"></iframe> -->
     </div>
 </body>
 </html>
