--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         }
 
         .frame-container {
-            width: 50%;
+            width: 100%;
             height: 100vh;
             float: left;
         }
@@ -46,10 +46,10 @@
         </div>
     </div> -->
     <div class="frame-container">
-        <iframe class="frame" src="https://lucasaguiar00.github.io/chat/"></iframe>
+        <iframe class="frame" src="https://prtg.noc.faster.com.br/api/table.json?content=sensors&username=callcenter_ncc&password=C0ntr0le@ncc&output=csvtable"></iframe>
     </div>
-    <div class="frame-container">
+    <!-- <div class="frame-container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZnV8sZ1sHh5L2s5jA6wvCq8o913uZXhY7DK7DZSkL4PfAOw/viewform?pli=1&pli=1"></iframe>
-    </div>
+    </div> -->
 </body>
 </html>
