--- a/index.html
+++ b/index.html
@@ -44,15 +44,9 @@
     </style>
 </head>
 <body>
-    <!-- <div class="frame-container">
-        <div class="container">
-            <iframe class="frame" src="https://ncctools.epizy.com"></iframe>
-            <iframe class="frame" src="http://adm.fasternet.com.br/tarefas_mostra.php?tarefa=3873264"></iframe>
-        </div>
-    </div> -->
     <div class="frame-container">
-        <H1>TODOS</H1>
-        <iframe class="frame" src="https://prtg.noc.faster.com.br/api/table.json?content=sensors&username=callcenter_ncc&password=C0ntr0le@ncc&output=csvtable"></iframe>
+        <H1>NORMAIS</H1>
+        <iframe class="frame" src="https://prtg.noc.faster.com.br/api/table.json?content=probes&username=callcenter_ncc&password=C0ntr0le@ncc&filter_status=3&output=csvtable"></iframe>
     </div>
 
 
