--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 </head>
 <body>
     <div class="frame-container">
-        <H1>NORMAIS</H1>
-        <iframe class="frame" src="https://prtg.noc.faster.com.br/api/table.json?content=probes&username=callcenter_ncc&password=C0ntr0le@ncc&filter_status=3&output=csvtable"></iframe>
+        <H1>teste1</H1>
+        <iframe class="frame" src="https://fasternet.matrixdobrasil.ai/Painel/login"></iframe>
     </div>
 
 
     <div class="frame-container">
-        <H1>PARADOS</H1>
-        <iframe src="https://prtg.noc.faster.com.br/api/table.json?content=probes&username=callcenter_ncc&password=C0ntr0le@ncc&filter_status=13&output=csvtable"></iframe>
+        <H1>teste2</H1>
+        <iframe src="https://ncctoolsmaster.epizy.com/index.php"></iframe>
     </div>
 </body>
 </html>
